--- a/public/assets/libs/css/style.css
+++ b/public/assets/libs/css/style.css
@@ -989,9 +989,11 @@ Pageheader
 .card {
     margin-bottom: 30px;
     border: none;
+    height: 80%;
     -webkit-box-shadow: 0px 1px 2px 1px rgba(154, 154, 204, 0.22);
     -moz-box-shadow: 0px 1px 2px 1px rgba(154, 154, 204, 0.22);
     box-shadow: 0px 1px 2px 1px rgba(154, 154, 204, 0.22);
+    /* margin-left: 30px; */
 }
 
 .card-header {
