--- a/public/assets/libs/css/style.css
+++ b/public/assets/libs/css/style.css
@@ -313,24 +313,20 @@ Top Header
 }
 
 
-
-.navbar-brand {
-    display: inline-block;
-    margin-right: 1rem;
-    line-height: inherit;
-    white-space: nowrap;
-    padding: 11px 20px;
-    font-size: 30px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #007bff;
-}
-.navbar-brand:hover{
-    color: #007bff;
-}
 .navbar-right-top .nav-item {
     border-right: 1px solid #e6e6f2;
 }
+ .nav-item a {
+    color: white;
+    font-size: large;
+    /* text-decoration: none; */
+}
+.nav-item a:hover{
+    /* color: white; */
+    text-decoration: none;
+}
+
+
 
 .navbar-right-top .nav-item:last-child {
     border: none;
@@ -341,6 +337,7 @@ Top Header
     font-size: 16px;
     line-height: 2;
     color: #82849f;
+
 }
 
 
@@ -606,7 +603,7 @@ Left Navigation Sidebar
 
 .nav-left-sidebar .navbar-nav .nav-link:focus,
 .nav-left-sidebar .navbar-nav .nav-link:hover {
-    background-color: #e2e2eb;
+    background-color: #0077ad;
     color: #3d405c;
     border-radius: 2px;
 }
